<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/customdialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout android:id="@+id/linearLayouttop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox android:id="@+id/dialogcheckbox"
            android:button="@drawable/btn_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"/>
        <EditText android:id="@+id/dialogedittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/linearLayoutbottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_below="@+id/linearLayouttop">
        <Button android:id="@+id/dialogupdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:layout_weight="1" />
        <Button android:id="@+id/dialogdismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dismiss"
            android:layout_weight="1" />
        <Button android:id="@+id/dialogdelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>